# adalight-rs

./: AdaLight.config.json  Cargo.toml  README.md
src/: gamma_correction.rs  hidden_window.rs  main.rs  opc_pool.rs  pixel_buffer.rs  screen_samples.rs  serial_port.rs  settings.rs  update_timer.rs
