[package]
name = "adalight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_UI_WindowsAndMessaging",
]